# cpu_renderer

./: Cargo.toml  README.md
src/: framebuffer.rs  main.rs  matrix.rs  renderer.rs  texture.rs  utils.rs  vector.rs
