[package]
name = "cpu_renderer"
version = "0.1.0"
authors = ["oigi333 <ignacy.kucharski@autonomik.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.13"
impl_ops = "0.1.1"
scoped_threadpool = "0.1.*"
crossbeam = "0.7"